--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
-                        <h1 class="mx-auto my-0 text-uppercase">Gråskala</h1>
+                        <h1 class="mx-auto my-0 text-uppercase">Gråskala som test</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">Bootstrap förenklar JÄTTEMYCKET.</h2>
                         <a class="btn btn-primary" href="#about">Starta</a>
                     </div>
